vertical scroll fix on some blades
Former-commit-id: 6cf4382f63bf76da66d849861ca5b48a1e3f5072

--- a/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/Scripts/Fulfillment/blades/fulfillment-center-contact.tpl.html
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/Scripts/Fulfillment/blades/fulfillment-center-contact.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="detailForm">
@@ -50,4 +51,3 @@
         </div>
     </div>
 </div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'"></div>
