--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-changePassword.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-changePassword.tpl.html
@@ -1,4 +1,9 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom">
+    <button ng-click="saveChanges()" class="btn" ng-class="{'__disabled': detailForm != undefined && detailForm.$invalid}" ng-disabled="detailForm != undefined && detailForm.$invalid">
+        <span>Ok</span>
+    </button>
+</div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <form class="form" name="detailForm">
@@ -32,9 +37,4 @@
             </form>
         </div>
     </div>
-</div>
-<div class="blade-static __bottom">
-    <button ng-click="saveChanges()" class="btn" ng-class="{'__disabled': detailForm != undefined && detailForm.$invalid}" ng-disabled="detailForm != undefined && detailForm.$invalid">
-        <span>Ok</span>
-    </button>
 </div>
