--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/wizards/newAccount/new-account-wizard.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/wizards/newAccount/new-account-wizard.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="formScope">
@@ -33,4 +34,3 @@
         </div>
     </div>
 </div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'"></div>
