--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-export.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-export.tpl.html
@@ -1,4 +1,9 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-if="blade.notification.finished">
+    <button class="btn" ng-click="bladeClose();">
+        <span>Close</span>
+    </button>
+</div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <div class="form">
@@ -30,9 +35,4 @@
             </div>
         </div>
     </div>
-</div>
-<div class="blade-static __bottom" ng-if="blade.notification.finished">
-    <button class="btn" ng-click="bladeClose();">
-        <span>Close</span>
-    </button>
 </div>
