--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content __medium-wide">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel.tpl.html'"></div>
+<div class="blade-content __medium-wide">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="detailForm">
@@ -118,4 +119,3 @@
         </div>
     </div>
 </div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel.tpl.html'"></div>
