--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
@@ -1,8 +1,13 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom">
+    <button ng-click="saveChanges()" class="btn" ng-class="{'__disabled': formScope != undefined && formScope.$invalid}" ng-disabled="formScope != undefined && formScope.$invalid">
+        <span>Create</span>
+    </button>
+</div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="detailForm">
-                <div class="form-group" ng-init="setForm(detailForm)">
+                <div ng-init="setForm(detailForm)">
                     <label class="form-label">Code</label>
                     <div class="form-input">
                         <input ng-model="blade.currentEntity.id" type="text" placeholder="Enter code" required focus-on="">
@@ -61,9 +66,4 @@
             </form>
         </div>
     </div>
-</div>
-<div class="blade-static __bottom">
-    <button ng-click="saveChanges()" class="btn" ng-class="{'__disabled': formScope != undefined && formScope.$invalid}" ng-disabled="formScope != undefined && formScope.$invalid">
-        <span>Create</span>
-    </button>
 </div>
