--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-api.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-api.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block form">
             <div class="form-group">
@@ -39,4 +40,3 @@
         </div>
     </div>
 </div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'"></div>
