--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/wizards/new-role-wizard.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/wizards/new-role-wizard.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <div class="sub-t __border">Summary</div>
@@ -31,4 +32,3 @@
         </div>
     </div>
 </div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'"></div>
