settings - dictionary-only setting management implemented and enabled for TaxTypes
Former-commit-id: 1fb4052220fae596b2ac933bcd4ec08ad03ef161

--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
@@ -2,7 +2,7 @@
 	<div class="blade-inner">
 		<div class="inner-block clearfix">
             <form class="form" name="detailForm">
-                <div class="form-group" ng-init="setForm(detailForm)">
+                <div ng-init="setForm(detailForm)">
                     <label class="form-label">Code</label>
                     <div class="form-input">
                         <p class="form-text">{{blade.currentEntity.id}}</p>
