--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="form-label">Tax Type <a href="" ng-click="openCoreSettingsManagement()"><i class="form-ico fa fa-pencil"></i></a></label>
+                        <label class="form-label">Tax type <a href="" ng-click="openDictionarySettingManagement()" va-permission="platform:setting:manage"><i class="form-ico fa fa-pencil"></i></a></label>
                         <div class="form-input">
                             <ui-select ng-model="blade.currentEntity.taxType">
                                 <ui-select-match allow-clear="true" placeholder="Select...">{{$select.selected}}</ui-select-match>
