catalog - correct blade icons for product blades set
Former-commit-id: 9178be053cb95e49f9005abee4104b73081bc7db

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-detail.tpl.html
@@ -3,7 +3,7 @@
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="formScope">
-                <div class="form-group">
+                <div>
                     <label class="form-label">Catalog name</label>
                     <div class="form-input">
                         <input ng-model="blade.currentEntity.name" placeholder="Enter name" focus-on="" required>
