--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/wizards/newCategory/category-wizard.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/wizards/newCategory/category-wizard.tpl.html
@@ -3,7 +3,7 @@
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="detailForm">
-                <div class="form-group" ng-init="setForm(detailForm)">
+                <div ng-init="setForm(detailForm)">
                     <label class="form-label">Name</label>
                     <div class="form-input">
                         <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter category name" />
