--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/categories-items-add.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/categories-items-add.tpl.html
@@ -13,12 +13,12 @@
                     <span class="list-descr">A link to real Category or Product.</span>
                 </li>
                 <li class="list-item" ng-mouseup="addProduct('Physical')" ng-if="!blade.parentBlade.catalog.virtual" va-permission="catalog:items:manage">
-                    <i class="list-ico fa fa-shopping-cart"></i>
+                    <i class="list-ico fa fa-truck"></i>
                     <span class="list-t">Physical Product</span>
                     <span class="list-descr">Represents orderable item of merchandise for sale, can be used for targeted promotions, etc. Requires physical shipping.</span>
                 </li>
                 <li class="list-item" ng-mouseup="addProduct('Digital')" ng-if="!blade.parentBlade.catalog.virtual" va-permission="catalog:items:manage">
-                    <i class="list-ico fa fa-shopping-cart"></i>
+                    <i class="list-ico fa fa-file-archive-o"></i>
                     <span class="list-t">Digital Product</span>
                     <span class="list-descr">Represents orderable item of merchandise for sale, can be used for targeted promotions, etc. Is digital product, thus is downloaded on purchase, not shipped.</span>
                 </li>
