--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
@@ -3,7 +3,7 @@
         <div class="inner-block">
             <form name="detailForm" class="form">
                 <fieldset ng-init="setForm(detailForm);">
-                    <div class="form-group">
+                    <div>
                         <label class="form-label">Name</label>
                         <div class="form-input">
                             <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter category name" />
