pricing - price list assignment details UI redesigned
Former-commit-id: 90aea42bddecebfbc2f1a74160e52086c46262d0

--- a/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-detail.tpl.html
+++ b/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-detail.tpl.html
@@ -3,7 +3,7 @@
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <form class="form" name="formScope">
-                <div class="form-group" ng-init="setForm(formScope)">
+                <div ng-init="setForm(formScope)">
                     <label class="form-label">Name</label>
                     <div class="form-input">
                         <input ng-model="blade.currentEntity.name" focus-on="" required placeholder="Enter name">
