--- a/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/assignment-detail.tpl.html
+++ b/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/assignment-detail.tpl.html
@@ -1,10 +1,9 @@
 ﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'" ng-if="blade.isNew"></div>
-<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'" ng-if="!blade.isApiSave && !blade.isNew"></div>
 <div class="blade-content __medium-wide">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" name="formScope">
-                <div class="form-group columns clearfix">
+                <div class="columns clearfix">
                     <div class="column">
                         <div class="form-group" ng-init="setForm(formScope)">
                             <label class="form-label">Assignment name</label>
@@ -12,7 +11,7 @@
                                 <input ng-model="blade.currentEntity.name" required placeholder="Enter name" />
                             </div>
                         </div>
-                        <div class="form-group" ng-if="blade.isNew || blade.isApiSave">
+                        <div class="form-group">
                             <label class="form-label">Price list</label>
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.pricelistId" required>
