--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-import.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-import.tpl.html
@@ -6,10 +6,10 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <div class="form clearfix" ng-if="!blade.notification">
+            <div class="clearfix" ng-if="!blade.notification">
                 <form name="importForm" class="form">
                     <fieldset ng-init="setForm(importForm)">
-                        <div class="form-group">
+                        <div>
                             <label class="form-label">Enter Code to change it for importing Store or leave it empty</label>
                             <div class="form-input">
                                 <input ng-model="blade.newStoreId" type="text" focus-on="" placeholder="Enter code">
