start notifications journal development
Former-commit-id: 058ccc35fe30a93b2523bd31db7c6f6befd42d86

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
@@ -36,7 +36,7 @@
 				<fieldset style="margin-top:20px;" ng-if="blade.isNew">
 					<legend>Language</legend>
 				</fieldset>
-				<div class="form-group" ng-if="blade.isNew">
+				<div class="form-group" ng-if="blade.isNew" style="margin-top:-16px;">
 					<div class="form-input">
 						<ui-select ng-model="blade.currentEntity.language">
 							<ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
