--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/shippingMethod-detail.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/shippingMethod-detail.tpl.html
@@ -20,6 +20,17 @@
                     </ul>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="form-label">Tax type <a href="" ng-click="openDictionarySettingManagement()" va-permission="platform:setting:manage"><i class="form-ico fa fa-pencil"></i></a></label>
+                <div class="form-input">
+                    <ui-select ng-model="blade.currentEntity.taxType">
+                        <ui-select-match allow-clear="true" placeholder="Select...">{{$select.selected}}</ui-select-match>
+                        <ui-select-choices repeat="x in taxTypes | filter: $select.search">
+                            <span ng-bind-html="x | highlight: $select.search"></span>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
             <form class="form" name="detailForm">
                 <div class="form-group" ng-init="setForm(detailForm)">
                     <label class="form-label">Description</label>
