customers - change password, reject/approve added to customer blade
Former-commit-id: 85048a6d8569b7d45ea02e3cae8a5c1c8ed2a8e8

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-changePassword.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-changePassword.tpl.html
@@ -19,10 +19,10 @@
                 <div class="form-group">
                     <label class="form-label">New password</label>
                     <div class="form-input">
-                        <input ng-model="blade.currentEntity.newPassword" ng-class="{'error': blade.currentEntity.oldPassword == blade.currentEntity.newPassword2}" required placeholder="Enter new password" type="password">
+                        <input name="newPassword" ng-model="blade.currentEntity.newPassword" ng-class="{'error': blade.currentEntity.oldPassword == blade.currentEntity.newPassword2}" required placeholder="Enter new password" type="password">
                     </div>
-                    <div class="form-error" ng-if="blade.currentEntity.oldPassword == blade.currentEntity.newPassword">
-                        <span ng-if="blade.currentEntity.oldPassword == blade.currentEntity.newPassword">Old and new passwords are the same!</span>
+                    <div class="form-error" ng-if="blade.currentEntity.oldPassword == blade.currentEntity.newPassword && !detailForm.newPassword.$pristine">
+                        <span>Old and new passwords are the same!</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -30,8 +30,8 @@
                     <div class="form-input">
                         <input name="newPassword2" ng-model="blade.currentEntity.newPassword2" ng-class="{'error': blade.currentEntity.newPassword != blade.currentEntity.newPassword2}" required placeholder="Repeat new password" type="password" ui-validate=" '$value==blade.currentEntity.newPassword' " ui-validate-watch=" 'blade.currentEntity.newPassword' ">
                     </div>
-                    <div class="form-error" ng-if="blade.currentEntity.newPassword != blade.currentEntity.newPassword2">
-                        <span ng-if="blade.currentEntity.newPassword != blade.currentEntity.newPassword2">New passwords doesn't match!</span>
+                    <div class="form-error" ng-if="!detailForm.newPassword2.$pristine && blade.currentEntity.newPassword != blade.currentEntity.newPassword2">
+                        <span>New passwords doesn't match!</span>
                     </div>
                 </div>
             </form>
