--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-detail.tpl.html
@@ -12,7 +12,7 @@
                     <div class="list-descr">{{blade.currentEntity.userState}}</div>
                 </li>
                 <li class="list-item">
-                    <div class="list-t">Is administrator</div>
+                    <div class="list-t">Account type</div>
                     <div class="list-descr">{{blade.currentEntity.userType}}</div>
                 </li>
             </ul>
