--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/blades/modules-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/blades/modules-list.tpl.html
@@ -24,8 +24,7 @@
                         <tr class="table-item" ng-repeat="data in blade.currentEntities | filter:searchText as filteredEntities track by data.id" ng-class="{'__selected': data.id === selectedEntityId}" ng-click='blade.selectItem(data.id)'>
                             <td class="table-col">
                                 <div class="product-img">
-                                    <!-- <div class="image" style="background-image: url({{data.iconUrl}})" ng-if="data.iconUrl"></div> -->
-                                    <i class="table-ico fa fa-cube"></i>
+                                     <div class="image" style="background-image: url({{data.iconUrl}})" ng-if="data.iconUrl"></div> 
                                 </div>
                             </td>
                             <td class="table-col">
