--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="blade-static __bottom">
-    <button class="btn" ng-click="startExport()" ng-disabled="blade.notification">
+    <button class="btn" ng-click="startExport()" ng-disabled="!canStartProcess() || blade.notification">
         <span>Start export</span>
     </button>
 </div>
@@ -11,7 +11,7 @@
                 <label class="list-item" ng-repeat="data in blade.currentEntities">
                     <input type="checkbox" ng-model="data.isChecked">
                     <span class="switch"></span>
-                    <span class="list-name">{{data.name}}</span>
+                    <span class="list-name">{{data.title}}</span>
                     <span class="list-descr">{{data.description}}</span>
                 </label>
             </div>
