--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
@@ -76,7 +76,7 @@
                 <div class="form columns clearfix">
                     <div class="column">
                         <div class="form-group">
-                            <label class="form-label">Fulfillment center</label>
+                            <label class="form-label">Fulfillment center <a href="" ng-click="openFulfillmentCentersList()"><i class="form-ico fa fa-pencil"></i></a></label>
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.fulfillmentCenter">
                                     <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="column">
                         <div class="form-group">
-                            <label class="form-label">Returns Fulfillment center</label>
+                            <label class="form-label">Returns Fulfillment center <a href="" ng-click="openFulfillmentCentersList()"><i class="form-ico fa fa-pencil"></i></a></label>
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.returnsFulfillmentCenter">
                                     <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
