--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-list.tpl.html
@@ -2,7 +2,7 @@
 	<div class="blade-inner">
 		<div class="inner-block">
 			<ul class="list __items">
-				<li class="list-item" ng-repeat="data in blade.currentEntities track by data.type" ng-class="{'__selected': data.type === selectedNodeId}" ng-click="blade.openNotification(data.type)">
+				<li class="list-item" ng-repeat="data in blade.currentEntities track by data.type" ng-class="{ '__selected': blade.selectedType === data.type }" ng-click="blade.openNotification(data.type)">
 					<a class="list-block">
 						<i class="list-ico fa fa-envelope" ng-if="data.isEmail"></i>
 						<i class="list-ico fa fa-mobile" ng-if="data.isSms"></i>
